--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    margin-left: 40px;
+}
+
 #navbarMonstera{
     display: flex;
     flex-direction: row;
@@ -8,6 +12,7 @@
     padding-left: 30px;
     padding-right: 30px;
 }
+
 #navMid{
     display: flex;
     flex-direction: row;
@@ -15,7 +20,8 @@
     align-items: center;
     list-style-type: none;
 }
-div>div>h4{
+
+#navMid>div>h4{
     padding-left: 40px ;
     padding-right: 40px;
     font-family: 'Abel';
@@ -24,25 +30,31 @@ div>div>h4{
     font-size: 20px;
 
 }
+
 #navEnd{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
 }
+
 nav>div>div>img{
     padding-left: 15px ;
     padding-right: 15px;
 }
+
 #midWhole{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
+
 #midWholePart1{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
 #midWholePart13{
     display: flex;
     flex-direction: row;
@@ -50,12 +62,14 @@ nav>div>div>img{
     align-items: center;
     padding-left: 80px;
 }
+
 #midWholePart13>div>div>h4{
     font-family: 'Allerta';
     font-style: normal;
     font-weight: 800;
     font-size: 20px;
 }
+
 #midWholePart11>div>ul>li{
     padding-left: 40px ;
     padding-right: 40px;
@@ -66,16 +80,19 @@ nav>div>div>img{
     line-height: 25px;
     color: #1f1f1f;
 }
+
 #monstera{
     font-family: 'Allerta';
     font-style: normal;
     font-weight: 1000;
     font-size: 100px;
 }
+
 #midWholePart11>div{
     position: relative;
     top: 150px;
 }
+
 #midWholePart121>div>h1{
     font-family: 'Abel';
     font-style: normal;
@@ -85,6 +102,7 @@ nav>div>div>img{
     font-weight: 100;
     color: #fff;
 }
+
 #midWholePart121::before{
     content: "";
     display: block;
@@ -96,41 +114,57 @@ nav>div>div>img{
     top: 125px;
     left: 70px;
 }
+
 #midWholePart122{
     position: relative;
     left: 238px;
     top: 8px;
 }
+
 #midWholePart122>img{
     width: 10px;
     height: 20px;
 }
+
 .text{
     font-family: 'Allerta';
     font-style: normal;
-    font-size: 10px;
+    font-size: 12px;
     width: 200px;
     position: relative;
     bottom: 100px;
     left: 60px;
     align-items: center;
 }
+
+.midWholePart13Parts{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 #fee{
     position: relative;
     bottom: 100px;
-    left: 50px;
+    left: 90px;
 }
+
 #lig{
     position: relative;
     bottom: 85px;
-    left: 10px;
+    left: 60px;
 }
+
 #car{
     position: relative;
     bottom: 85px;
-    left: 25px;
+    left: 65px;
 }
+
 .special{
     position: relative;
     bottom: 35px;
+}
+
+#midWhole>div>img{
+    float: right;
 }
